--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,5 @@
 builds:
-- main: ./main.go
+- main: ./cmd/kubectl-neat/main.go
   env:
   - CGO_ENABLED=0
   goos:
@@ -9,7 +9,7 @@ builds:
     - amd64
     - arm64
   ldflags:
-    - -s -w -X github.com/itaysk/kubectl-neat/cmd.Version={{ .Version }}
+    - -s -w -X github.com/addreas/kubectl-neat/cmd.Version={{ .Version }}
 archives:
 - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
 checksum:
